<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.CodeEditorFragment">

    <data>
        <variable
            name="codeEditorViewModel"
            type="com.example.codeeditor.viewmodels.CodeEditorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollViewCodeEditor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/layout_padding"
            android:background="@drawable/boundary"
            android:fillViewport="true"
            android:textIsSelectable="true"
            app:layout_constraintBottom_toTopOf="@+id/scrollViewInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintVertical_bias="1.0">

            <EditText
                android:id="@+id/code_edit"
                style="@style/Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:paddingStart="@dimen/code_editor_padding"
                android:paddingTop="@dimen/code_editor_padding"
                android:paddingEnd="@dimen/code_editor_padding"
                android:paddingBottom="@dimen/code_editor_padding"
                android:text="@={codeEditorViewModel.code}"
                android:textIsSelectable="true"/>
        </ScrollView>

        <TextView
            android:id="@+id/input_message"
            style="@style/Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin"
            android:gravity="center"
            android:text="@string/input_message"
            app:layout_constraintBottom_toTopOf="@+id/compile_button"
            app:layout_constraintEnd_toStartOf="@+id/scrollViewInput"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollViewCodeEditor" />

        <ScrollView
            android:id="@+id/scrollViewInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="@dimen/layout_padding"
            android:background="@drawable/boundary"
            android:textIsSelectable="true"
            app:layout_constraintBottom_toTopOf="@+id/compile_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/input_message"
            app:layout_constraintTop_toBottomOf="@+id/scrollViewCodeEditor"
            app:layout_constraintVertical_bias="1.0">

            <EditText
                android:id="@+id/input_edit"
                style="@style/Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:paddingStart="@dimen/code_editor_padding"
                android:paddingTop="@dimen/code_editor_padding"
                android:paddingEnd="@dimen/code_editor_padding"
                android:paddingBottom="@dimen/code_editor_padding"
                android:text="@={codeEditorViewModel.input}"
                android:textIsSelectable="true"/>
        </ScrollView>

        <Button
            android:id="@+id/compile_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/compile_button_text"
            android:onClick="@{() -> codeEditorViewModel.compile()}"
            app:layout_constraintBottom_toTopOf="@+id/scrollViewOutput"
            app:layout_constraintEnd_toStartOf="@+id/clear_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.985" />

        <Button
            android:id="@+id/clear_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/clear_button_text"
            android:onClick="@{() -> codeEditorViewModel.clear()}"
            app:layout_constraintBottom_toTopOf="@+id/scrollViewOutput"
            app:layout_constraintEnd_toStartOf="@+id/code_review_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/compile_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.985" />

        <Button
            android:id="@+id/code_review_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/code_review_button_text"
            app:layout_constraintBottom_toTopOf="@+id/scrollViewOutput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.658"
            app:layout_constraintStart_toEndOf="@id/clear_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.985" />

        <TextView
            android:id="@+id/output_message"
            style="@style/Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/output_message"
            android:visibility="@{codeEditorViewModel.outputVisible}"
            app:layout_constraintEnd_toStartOf="@+id/scrollViewOutput"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/compile_button" />

        <ScrollView
            android:id="@+id/scrollViewOutput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="@dimen/layout_padding"
            android:layout_marginBottom="8dp"
            android:background="@drawable/boundary"
            android:fillViewport="true"
            android:visibility="@{codeEditorViewModel.outputVisible}"
            android:textIsSelectable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/output_message">

            <TextView
                android:id="@+id/output"
                style="@style/Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingStart="@dimen/code_editor_padding"
                android:paddingTop="@dimen/code_editor_padding"
                android:paddingEnd="@dimen/code_editor_padding"
                android:paddingBottom="@dimen/code_editor_padding"
                android:text="@{codeEditorViewModel.output}"
                android:textIsSelectable="true" />
        </ScrollView>

        <Spinner
            android:id="@+id/spinner"
            style="@style/Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:prompt="@string/code_review_button_text"
            app:layout_constraintBottom_toTopOf="@+id/scrollViewCodeEditor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.184"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/textView"
            style="@style/Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/dropdown_message"
            app:layout_constraintBottom_toTopOf="@+id/scrollViewCodeEditor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>